# vos-studio-mcp

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  generate-uv-lock.yml  publish-ghcr.yml  release.yml
db/: models.py
db/migrations/: env.py
docs/adr/: 0001-use-python-as-primary-language.md  0001-use-typescript-as-primary-language.md  0002-build-remote-http-mcp-server.md  0003-separate-dashboard-manual-and-api-credits-modes.md  0004-do-not-automate-provider-dashboards.md  0005-require-human-approval-for-paid-or-external-actions.md  0006-use-workflow-oriented-tools-to-reduce-token-cost.md  0007-use-supabase-postgres-as-system-of-record.md  0008-store-assets-outside-the-mcp-and-return-references.md  0009-use-provider-adapters.md  0010-treat-creative-sprint-as-core-domain-entity.md  0011-keep-mcp-tool-outputs-compact-and-structured.md  0012-use-explicit-cost-budgets-and-generation-limits.md  0013-keep-prompts-and-presets-versioned.md  0014-use-queues-for-long-running-generation-jobs.md  0015-implement-audit-logs-for-operational-traceability.md  0016-use-environment-variables-and-secret-management.md  0017-start-private-first-and-client-safe-by-design.md  0018-use-incremental-pr-based-development-with-coding-agents.md  0019-define-authentication-model-for-remote-mcp-server.md  0020-database-schema-evolution-and-migration-strategy.md  0021-job-queue-technology-selection.md  0022-provider-adapter-interface-contract.md  0023-multitenancy-and-client-data-isolation.md  0024-brand-kit-entity-specification.md  0025-performance-feedback-loop-and-creative-learning.md  0026-testing-strategy.md  0027-ab-testing-within-creative-sprints.md  0028-provider-webhook-support.md  0029-cross-client-prompt-library.md  0030-observability-and-failure-diagnostics.md  0030-observability-structured-logging-and-error-tracking.md  0031-split-generation-storage-status.md  0031-vos-native-domain-evolution-roadmap.md  0032-ssrf-protection-for-outbound-webhooks.md  0033-cross-tenant-authorization-regression-matrix.md  0034-provider-usage-ledger.md  0035-circuit-breaker-for-provider-resilience.md  0036-outbound-webhook-retry-policy.md  0037-asset-stage-and-lineage-model.md  (+5 more)
docs/architecture/: project-architecture.md
scripts/: start-local.ps1
src/vos_studio_mcp/: __init__.py  _instance.py  errors.py  server.py
tests/: conftest.py  test_mcp_resources_prompts.py  test_server.py
tests/auth/: test_auth_middleware.py  test_jwt.py  test_middleware_production.py
tests/integration/: test_rls_isolation.py  test_webhook_db.py
tests/observability/: test_logging.py  test_metrics.py  test_middleware.py
tests/providers/: test_adapter_contract.py  test_capabilities.py  test_cloudflare_workers_ai.py  test_freepik.py  test_higgsfield.py  test_magnific.py  test_manual_dashboard.py
tests/routes/: test_webhook_freepik_magnific.py  test_webhook_higgsfield.py  test_webhook_media_type.py
tests/schemas/: test_asset_stage_schemas.py  test_blueprint_schemas.py  test_brand_kit_asset_lock.py
tests/security/: test_cross_tenant_authorization.py  test_provider_usage_events_rls.py  test_rls_isolation.py
tests/services/: test_asset_review_service.py  test_asset_service.py  test_audit_service.py  test_blueprint_9shot.py  test_blueprint_field_mapping.py  test_blueprint_service.py  test_brand_kit_service.py  test_budget_guard.py  test_campaign_angles_service.py  test_capability_registry.py  test_circuit_breaker.py  test_client_analytics_service.py  test_client_service.py  test_creative_brief_service.py  test_database_helpers.py  test_execution_pack_service.py  test_generation_service.py  test_get_video_job_status.py  test_health.py  test_higgsfield_mcp_adapter.py  test_higgsfield_mcp_client.py  test_library_maintenance_service.py  test_list_video_jobs.py  test_performance_ranking.py  test_performance_record_service.py  test_performance_service.py  test_prompt_library_service.py  test_rate_limiter.py  test_readiness_service.py  test_search_library.py  test_sprint_idempotency.py  test_sprint_service.py  test_status.py  test_storage.py  test_tool_catalog_service.py  test_variant_service.py  test_webhook_notifier.py  test_webhook_ssrf_guard.py  test_workflow_guide_service.py
tests/tasks/: test_base.py  test_notify_webhook.py  test_poll_video.py  test_scheduled.py  test_upload_image.py  test_upload_video.py
tests/tools/: test_generate_campaign_angles.py  test_get_provider_usage_summary.py  test_get_sprint_status.py  test_health.py  (+9 more)
(+142 files in other folders)
