[project]
name = "vos-studio-mcp"
version = "0.1.0"
description = "VOS Studio MCP — Creative operations server for AI-assisted agency workflows"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
    "flower>=2.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vos_studio_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/vos_studio_mcp --cov-report=term-missing"

[tool.coverage.run]
source = ["src/vos_studio_mcp"]
omit = ["tests/*"]

[tool.uv.scripts]
dev      = "uvicorn vos_studio_mcp.server:app --reload --port 8000"
worker   = "celery -A vos_studio_mcp.tasks.celery_app worker --loglevel=info"
flower   = "celery -A vos_studio_mcp.tasks.celery_app flower --port=5555"
migrate  = "alembic upgrade head"
makemig  = "alembic revision --autogenerate -m"
typecheck = "mypy src/"
lint     = "ruff check src/ tests/"
fmt      = "ruff format src/ tests/"
test     = "pytest"
