[project]
name = "vos-studio-mcp"
version = "1.15.1"
description = "VOS Studio MCP — Creative operations server for AI-assisted agency workflows"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "authlib>=1.3.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "sentry-sdk[fastapi,celery]>=2.0.0",
    "joserfc>=1.6.5",
    "boto3>=1.34.0",
    "prometheus-client>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
    "flower>=2.0.0",
    "respx>=0.21.0",
    "python-semantic-release>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vos_studio_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["celery", "celery.*", "authlib", "authlib.*", "boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/vos_studio_mcp --cov-report=term-missing"
markers = [
    "integration: requires a real PostgreSQL database and Redis (skipped without DATABASE_URL)",
]

[tool.coverage.run]
source = ["src/vos_studio_mcp"]
omit = ["tests/*"]

# ---------------------------------------------------------------------------
# python-semantic-release
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/vos_studio_mcp/__init__.py:__version__"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "echo 'no build step'"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
# Conventional Commits → bump rules
# feat → minor  |  fix/perf → patch  |  BREAKING CHANGE → major
allowed_tags = ["feat", "fix", "perf", "refactor", "chore", "docs", "style", "test", "ci", "build", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore",
    "^ci",
    "^style",
    "^test",
    "^docs",
]

[tool.semantic_release.remote]
type = "github"

